@@ -26,7 +26,6 @@ import java.sql.SQLException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Represents a batch query which updates an entity in the database.
@@ -51,8 +50,7 @@ public class UpdateQuery<E extends SQLEntity> extends BatchQuery<E> {
      */
     public UpdateQuery<E> withUpdatedMappings(Mapping... mappingsToUpdate) {
         EntityDescriptor ed = getDescriptor();
-        this.propertiesToUpdate =
-                Arrays.stream(mappingsToUpdate).map(Mapping::getName).map(ed::getProperty).collect(Collectors.toList());
+        this.propertiesToUpdate = Arrays.stream(mappingsToUpdate).map(Mapping::getName).map(ed::getProperty).toList();
         return this;
     }
 
@@ -73,7 +71,7 @@ public class UpdateQuery<E extends SQLEntity> extends BatchQuery<E> {
      * @param addBatch     determines if the query should be executed instantly (<tt>false</tt>) or added to the
      *                     batch update (<tt>true</tt>).
      */
-    @SuppressWarnings("unchecked")
+    @SuppressWarnings({"unchecked", "resource"})
     public void update(@Nonnull E entity, boolean invokeChecks, boolean addBatch) {
         try {
             if (this.type == null) {
