@@ -29,7 +29,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 /**
  * Permits to store a {@link MultiPointLocation} as location aware "MultiPoint" in MongoDB.
@@ -83,7 +82,7 @@ public class MultiPointLocationProperty extends Property {
             coordinates.add(latLong.getFirst());
             coordinates.add(latLong.getSecond());
             return coordinates;
-        }).collect(Collectors.toList());
+        }).toList();
 
         if (locationList.isEmpty()) {
             return null;
@@ -105,7 +104,7 @@ public class MultiPointLocationProperty extends Property {
             if (coordinates instanceof List<?>) {
                 return ((List<List<Double>>) coordinates).stream()
                                                          .map(entry -> Tuple.create(entry.get(0), entry.get(1)))
-                                                         .collect(Collectors.toList());
+                                                         .toList();
             }
         }
 
